fix: register-buttoms links expanded, unused div removed

--- a/index.html
+++ b/index.html
@@ -22,72 +22,64 @@
   </head>
   <body>
     <header id="header" class="header">
-      <div>
-        <div class="nav">
-          <img src="images/logo_header.png" alt="GhostHost" class="logo" />
-          <ul class="menu">
-            <li>
-              <div class="menu-points">
-                <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
-                  Home
-                </a>
-              </div>
-            </li>
-            <li>
-              <div class="menu-points">
-                <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
-                  Domain
-                </a>
-              </div>
-            </li>
-            <li>
-              <div class="menu-points">
-                <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
-                  Hosting
-                </a>
-              </div>
-            </li>
-            <li>
-              <div class="menu-points">
-                <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
-                  Clients
-                </a>
-              </div>
-            </li>
-            <li>
-              <div class="menu-points">
-                <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
-                  Blog
-                </a>
-              </div>
-            </li>
-            <li>
-              <div class="menu-points">
-                <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
-                  Support
-                </a>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div class="header-text">
-          <h1 class="welcome-text">Hello!</h1>
-          <div class="welcome-helper">
-            <p id="first-line-helper"><i>We love our work...</i></p>
-            <p id="second-line-helper">
-              <i>And We're taking it seriously...</i>
-            </p>
-          </div>
-        </div>
+      <div class="nav">
+        <img src="images/logo_header.png" alt="GhostHost" class="logo" />
+        <ul class="menu">
+          <li>
+            <div class="menu-points">
+              <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+                Home
+              </a>
+            </div>
+          </li>
+          <li>
+            <div class="menu-points">
+              <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+                Domain
+              </a>
+            </div>
+          </li>
+          <li>
+            <div class="menu-points">
+              <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+                Hosting
+              </a>
+            </div>
+          </li>
+          <li>
+            <div class="menu-points">
+              <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+                Clients
+              </a>
+            </div>
+          </li>
+          <li>
+            <div class="menu-points">
+              <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+                Blog
+              </a>
+            </div>
+          </li>
+          <li>
+            <div class="menu-points">
+              <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+                Support
+              </a>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="header-text">
+        <h1 class="welcome-text">Hello!</h1>
+        <p class="welcome-helper"><i>We love our work...</i></p>
+        <p class="welcome-helper">
+          <i>And We're taking it seriously...</i>
+        </p>
       </div>
     </header>
     <section id="register" class="register">
-      <div class="register-buttoms">
-        <a href="#" class="login-buttom">login</a>
-      </div>
-      <div class="register-buttoms">
-        <a href="#" class="reg-buttom">register</a>
-      </div>
+      <a href="#" class="login-buttom">login</a>
+      <a href="#" class="reg-buttom">register</a>
     </section>
     <section id="search-shop" class="search-shop">
       <div class="shop-text">
